add 1 more portofolio

--- a/index.html
+++ b/index.html
@@ -479,34 +479,64 @@
         </article>
         <article class="postcard light green" data-aos="fade-right">
           <a class="postcard__img_link" href="javascript:void(0);">
-            <img
-              class="postcard__img"
-              src="https://picsum.photos/500/501"
-              alt="Image Title"
-            />
+            <video class="portfolioVideo">
+              <source src="./assets/video/restapi.mp4" type="video/mp4" />
+            </video>
           </a>
           <div class="postcard__text t-dark">
-            <h1 class="postcard__title green"><a href="#">Podcast Title</a></h1>
+            <h1 class="postcard__title red">
+              <a href="#">Simple Login Webstie</a>
+            </h1>
             <div class="postcard__subtitle small">
               <time>
-                <i class="fas fa-calendar-alt mr-2"></i>Mon, May 25th 2020
+                <i class="fas fa-calendar-alt mr-2"></i>28th January 2022
               </time>
             </div>
             <div class="postcard__bar"></div>
             <div class="postcard__preview-txt">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-              fugiat asperiores inventore beatae accusamus odit minima enim,
-              commodi quia, doloribus eius! Ducimus nemo accusantium maiores
-              velit corrupti tempora reiciendis molestiae repellat vero. Eveniet
-              ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum
-              dolores nobis enim quidem excepturi, illum quos!
+              Simple login and sign in website, i made this to practice my
+              back-end skills; this website provide all the database list once
+              you are login to the website. Just like the name "Simple".
             </div>
-
+            <div class="techUsed">
+              <ul class="techUsed__icons">
+                <li class="tag__item htmlIcon">
+                  <i class="fab fa-html5" title="HTML5"></i>
+                </li>
+                <li class="tag__item cssIcon">
+                  <i class="fab fa-css3-alt" title="CSS3"></i>
+                </li>
+                <li class="tag__item bootstrapIcon">
+                  <i class="fab fa-bootstrap" title="BOOTSTRAP5"></i>
+                </li>
+                <li class="tag__item javascriptIcon">
+                  <i class="fab fa-js-square" title="JAVASCRIPT"></i>
+                </li>
+                <li class="tag__item nodejsIcon">
+                  <i class="fab fa-node" title="NODEJS"></i>
+                </li>
+                <li class="tag__item expressjsIcon">
+                  <i class="fa fa-book fa-solid" title="EXPRESSJS"></i>
+                </li>
+                <li class="tag__item mongodbIcon">
+                  <i class="fa fa-solid fa-leaf" title="MONGODB"></i>
+                </li>
+              </ul>
+            </div>
             <ul class="postcard__tagbox">
-              <li class="tag__item">
-                <i class="fab fa-github mr-2"></i>Github
-              </li>
-              <li class="tag__item"><i class="fas fa-link mr-2"></i>Demo</li>
+              <a
+                href="https://github.com/rendisagala/web-portfolio"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <li class="tag__item">
+                  <i class="fab fa-github mr-2"></i>Github
+                </li></a
+              ><a rel="noopener noreferrer">
+                <li class="tag__item">
+                  <i class="fas fa-link mr-2"></i>Demo
+                </li></a
+              >
             </ul>
           </div>
         </article>
