add skills section

--- a/index.html
+++ b/index.html
@@ -327,6 +327,21 @@
           <div class="col-sm-6 col-lg-4">
             <div class="feature-box-1" data-aos="flip-down">
               <div class="icon">
+                <i class="fab fa-react"></i>
+              </div>
+              <div class="feature-content">
+                <h5>React</h5>
+                <p>
+                  React is a free and open-source front-end JavaScript library
+                  for building user interfaces based on UI components.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4">
+            <div class="feature-box-1" data-aos="flip-down">
+              <div class="icon">
                 <i class="fab fa-git"></i>
               </div>
               <div class="feature-content">
