--- a/index.html
+++ b/index.html
@@ -484,7 +484,11 @@
                 <li class="tag__item">
                   <i class="fab fa-github mr-2"></i>Github
                 </li></a
-              ><a rel="noopener noreferrer">
+              ><a
+                rel="noopener noreferrer"
+                href="https://rendisagala.github.io/rendisagala19/"
+                target="_blank"
+              >
                 <li class="tag__item">
                   <i class="fas fa-link mr-2"></i>Demo
                 </li></a
