--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                 </li></a
               ><a
                 rel="noopener noreferrer"
-                href="https://rendisagala.github.io/rendisagala19/"
+                href="https://rendisagala.vercel.app/"
                 target="_blank"
               >
                 <li class="tag__item">
