--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                   <i class="fab fa-github mr-2"></i>Github
                 </li></a
               ><a
-                href="https://rendisagala.github.io/Whack-a-Mole/"
+                href="https://whackamolebyras.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer"
               >
