--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/font.css" />
     <!-- title icon -->
     <link rel="icon" href="./assets/icon/fa faR.svg" />
-    <!-- dark Mode -->
+    <!-- dark mode -->
     <link rel="stylesheet" href="./assets/css/dark.css" />
     <!-- bootstrap css -->
     <link
