add new work section

--- a/index.html
+++ b/index.html
@@ -167,13 +167,10 @@
               <h3>About Me.</h3>
               <hr />
               <p class="fs-3" data-aos="zoom-in-left">
-                Hi&#128075;, i am Rendi Anjuma Sagala. Currently, i am studying
-                accounting major 4th semester in Tanjungpura University,
-                Indonesia. Beside my college major, i am interested in
-                technology especially programming. I started learning
-                programming since October 2021, and now I'm learning back end
-                web development. If you interested with my resume and portfolio,
-                please don't mind to reach me on contact below.
+                Hi&#128075;, i am Rendi Anjuma Sagala. I am a self-motivated
+                developer from West Borneo, Indonesia. Currently, i am learning
+                JavaScript FullStack. I love to learn new things. Please check
+                out my work below.
               </p>
 
               <div class="btn-bar">
@@ -499,12 +496,12 @@
         <article class="postcard light green" data-aos="fade-right">
           <a class="postcard__img_link" href="javascript:void(0);">
             <video class="portfolioVideo">
-              <source src="./assets/video/restapi.mp4" type="video/mp4" />
+              <source src="./assets/video/taskhelper.mp4" type="video/mp4" />
             </video>
           </a>
           <div class="postcard__text t-dark">
             <h1 class="postcard__title red">
-              <a href="#">Simple Login Webstie</a>
+              <a href="#">TaskHelper</a>
             </h1>
             <div class="postcard__subtitle small">
               <time>
@@ -513,9 +510,8 @@
             </div>
             <div class="postcard__bar"></div>
             <div class="postcard__preview-txt">
-              Simple login and sign in website, i made this to practice my
-              back-end skills; this website provide all the database list once
-              you are login to the website. Just like the name "Simple".
+              TaskHelper is a website that will help you manage list of the
+              tasks that you have to do, or things that you want to do.
             </div>
             <div class="techUsed">
               <ul class="techUsed__icons">
@@ -544,14 +540,18 @@
             </div>
             <ul class="postcard__tagbox">
               <a
-                href="https://github.com/rendisagala/expressjs-mongodb-loginweb"
+                href="https://github.com/rendisagala/TaskHelper-App"
                 target="_blank"
                 rel="noopener noreferrer"
               >
                 <li class="tag__item">
                   <i class="fab fa-github mr-2"></i>Github
                 </li></a
-              ><a rel="noopener noreferrer">
+              ><a
+                rel="noopener noreferrer"
+                href="https://taskhelper-app.herokuapp.com/"
+                target="_blank"
+              >
                 <li class="tag__item">
                   <i class="fas fa-link mr-2"></i>Demo
                 </li></a
@@ -569,7 +569,7 @@
           </a>
           <div class="postcard__text t-dark">
             <h1 class="postcard__title yellow">
-              <a href="#">Podcast Title</a>
+              <a href="#">Soon...</a>
             </h1>
             <div class="postcard__subtitle small">
               <time>
@@ -720,7 +720,7 @@
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
             <p class="copyright-text">
-              Copyright &copy; 2017 All Rights Reserved by
+              Copyright &copy; 2022 All Rights Reserved by
               <a href="javascript:void(0);">@rendisagala</a>.
             </p>
           </div>
@@ -792,6 +792,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/js/typedText.js"></script>
+
     <!-- AOS for animation -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
