--- a/index.html
+++ b/index.html
@@ -512,6 +512,8 @@
             <div class="postcard__preview-txt">
               TaskHelper is a website that will help you manage list of the
               tasks that you have to do, or things that you want to do.
+              TaskHelper is provided with a login system that will secure and
+              keep your data save.
             </div>
             <div class="techUsed">
               <ul class="techUsed__icons">
