add portfolio section

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <span class="wrap"></span>
               </a>
             </h1>
-            <p class="lead">Web Developer, lifetime learner.</p>
+            <p class="lead">Full-Stack Developer, lifetime learner.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
               <button
                 type="button"
@@ -216,66 +216,6 @@
           <div class="col-sm-6 col-lg-4">
             <div class="feature-box-1" data-aos="flip-down">
               <div class="icon">
-                <i class="fab fa-html5"></i>
-              </div>
-              <div class="feature-content">
-                <h5>HTML5</h5>
-                <p>
-                  HTML stands for Hyper Text Markup Language. HTML is the
-                  standard markup language for Web pages.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4">
-            <div class="feature-box-1" data-aos="flip-down">
-              <div class="icon">
-                <i class="fab fa-css3"></i>
-              </div>
-              <div class="feature-content">
-                <h5>CSS3</h5>
-                <p>
-                  CSS stands for Cascading Style Sheets, adds styles like fonts
-                  and colors to websites.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4">
-            <div class="feature-box-1" data-aos="flip-down">
-              <div class="icon">
-                <i class="fab fa-bootstrap"></i>
-              </div>
-              <div class="feature-content">
-                <h5>BOOTSTRAP5</h5>
-                <p>
-                  Bootstrap is an open-source CSS framework directed at
-                  responsive, mobile-first front-end web development.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4">
-            <div class="feature-box-1" data-aos="flip-down">
-              <div class="icon">
-                <i class="fab fa-js"></i>
-              </div>
-              <div class="feature-content">
-                <h5>JavaScript</h5>
-                <p>
-                  JavaScript is a programming language used to create dynamic
-                  and interactive web pages.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4">
-            <div class="feature-box-1" data-aos="flip-down">
-              <div class="icon">
                 <i class="fab fa-node-js"></i>
               </div>
               <div class="feature-content">
@@ -324,6 +264,23 @@
           <div class="col-sm-6 col-lg-4">
             <div class="feature-box-1" data-aos="flip-down">
               <div class="icon">
+                <i class="fas fa-server"></i>
+              </div>
+              <div class="feature-content">
+                <h5>MySQL</h5>
+                <p>
+                  MySQL is an open-source relational database management system.
+                  Its name is a combination of "My", the name of co-founder
+                  Michael Widenius's daughter, and "SQL", the abbreviation for
+                  Structured Query Language.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4">
+            <div class="feature-box-1" data-aos="flip-down">
+              <div class="icon">
                 <i class="fab fa-react"></i>
               </div>
               <div class="feature-content">
@@ -348,6 +305,21 @@
                   usually used for coordinating work among programmers
                   collaboratively developing source code during software
                   development.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4">
+            <div class="feature-box-1" data-aos="flip-down">
+              <div class="icon">
+                <i class="fab fa-js"></i>
+              </div>
+              <div class="feature-content">
+                <h5>JavaScript</h5>
+                <p>
+                  JavaScript is a programming language used to create dynamic
+                  and interactive web pages.
                 </p>
               </div>
             </div>
@@ -499,9 +471,6 @@
             </div>
             <div class="techUsed">
               <ul class="techUsed__icons">
-                <li class="tag__item javascriptIcon">
-                  <i class="fab fa-js-square" title="JAVASCRIPT"></i>
-                </li>
                 <li class="tag__item nodejsIcon">
                   <i class="fab fa-node" title="NODEJS"></i>
                 </li>
@@ -510,6 +479,9 @@
                 </li>
                 <li class="tag__item mongodbIcon">
                   <i class="fa fa-solid fa-leaf" title="MONGODB"></i>
+                </li>
+                <li class="tag__item javascriptIcon">
+                  <i class="fab fa-js-square" title="JAVASCRIPT"></i>
                 </li>
               </ul>
             </div>
@@ -534,38 +506,124 @@
             </ul>
           </div>
         </article>
+
         <article class="postcard light yellow" data-aos="fade-left">
           <a class="postcard__img_link" href="javascript:void(0);">
-            <img
-              class="postcard__img"
-              src="https://picsum.photos/501/501"
-              alt="Image Title"
-            />
+            <video class="portfolioVideo">
+              <source
+                src="./assets/video/employeetracker.mp4"
+                type="video/mp4"
+              />
+            </video>
           </a>
           <div class="postcard__text t-dark">
             <h1 class="postcard__title yellow">
-              <a href="#">Soon...</a>
+              <a href="#">Employee Tracker API</a>
             </h1>
             <div class="postcard__subtitle small">
               <time>
-                <i class="fas fa-calendar-alt mr-2"></i>Mon, May 25th 2020
+                <i class="fas fa-calendar-alt mr-2"></i>May 26th 2022
               </time>
             </div>
             <div class="postcard__bar"></div>
             <div class="postcard__preview-txt">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-              fugiat asperiores inventore beatae accusamus odit minima enim,
-              commodi quia, doloribus eius! Ducimus nemo accusantium maiores
-              velit corrupti tempora reiciendis molestiae repellat vero. Eveniet
-              ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum
-              dolores nobis enim quidem excepturi, illum quos!
+              An API that provide more than 1000+ dummy employee data that is
+              free to use made by @rendisagala.
             </div>
-
+            <div class="techUsed">
+              <ul class="techUsed__icons">
+                <li class="tag__item nodejsIcon">
+                  <i class="fab fa-node" title="NODEJS"></i>
+                </li>
+                <li class="tag__item expressjsIcon">
+                  <i class="fa fa-book fa-solid" title="EXPRESSJS"></i>
+                </li>
+                <li class="tag__item mysqlIcon">
+                  <i class="fa fa-solid fa-server" title=""></i>
+                </li>
+                <li class="tag__item javascriptIcon">
+                  <i class="fab fa-js-square" title="JAVASCRIPT"></i>
+                </li>
+              </ul>
+            </div>
             <ul class="postcard__tagbox">
-              <li class="tag__item">
-                <i class="fab fa-github mr-2"></i>Github
-              </li>
-              <li class="tag__item"><i class="fas fa-link mr-2"></i>Demo</li>
+              <a
+                href="https://github.com/rendisagala/Employee-Tracker-API"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <li class="tag__item">
+                  <i class="fab fa-github mr-2"></i>Github
+                </li></a
+              ><a
+                rel="noopener noreferrer"
+                href="https://github.com/rendisagala/Employee-Tracker-API"
+                target="_blank"
+              >
+                <li class="tag__item">
+                  <i class="fas fa-link mr-2"></i>Demo
+                </li></a
+              >
+            </ul>
+          </div>
+        </article>
+
+        <article class="postcard light green" data-aos="fade-right">
+          <a class="postcard__img_link" href="javascript:void(0);">
+            <video class="portfolioVideo">
+              <source src="./assets/video/moviegeeks.mp4" type="video/mp4" />
+            </video>
+          </a>
+          <div class="postcard__text t-dark">
+            <h1 class="postcard__title red">
+              <a href="#">Movie Geeks</a>
+            </h1>
+            <div class="postcard__subtitle small">
+              <time>
+                <i class="fas fa-calendar-alt mr-2"></i>07th July 2022
+              </time>
+            </div>
+            <div class="postcard__bar"></div>
+            <div class="postcard__preview-txt">
+              Movie Geeks is a website that provides you information about your
+              favorite movie and TV series. You can see all about the film,
+              trailer, photos, review, and other stuff you need to know about
+              your favorite movie and film.
+            </div>
+            <div class="techUsed">
+              <ul class="techUsed__icons">
+                <li class="tag__item nodejsIcon">
+                  <i class="fab fa-node" title="NODEJS"></i>
+                </li>
+                <li class="tag__item expressjsIcon">
+                  <i class="fa fa-book fa-solid" title="EXPRESSJS"></i>
+                </li>
+                <li class="tag__item mongodbIcon">
+                  <i class="fa fa-solid fa-bezier-curve" title="AXIOS"></i>
+                </li>
+                <li class="tag__item javascriptIcon">
+                  <i class="fab fa-js-square" title="JAVASCRIPT"></i>
+                </li>
+              </ul>
+            </div>
+            <ul class="postcard__tagbox">
+              <a
+                href="https://moviegeeksapp.herokuapp.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <li class="tag__item">
+                  <i class="fab fa-github mr-2"></i>Github
+                </li></a
+              ><a
+                rel="noopener noreferrer"
+                href="https://moviegeeksapp.herokuapp.com/"
+                target="_blank"
+              >
+                <li class="tag__item">
+                  <i class="fas fa-link mr-2"></i>Demo
+                </li></a
+              >
             </ul>
           </div>
         </article>
